adding css sheet

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <div id = "firstname">
     <input id = "firstname" type = "text" placeholder = "first name"/>
