--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </button>
   </div>
 <br/>
- <div class="loader" style="opacity:0"></div>
+ <div class="loader"></div>
  <script type="text/javascript" src = "DOMpractice.js"></script>
 </body>
