changing the script

--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
   </div>
 <br/>
  <div class="loader"></div>
- <script type="text/javascript" src = "DOMpractice.js"></script>
+ <script type="text/javascript" src = "formScript.js"></script>
 </body>
