creating new css section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </button>
   </div>
 <br/>
- <div class="loader"></div>
+ <div class="loader" id = "loader"></div>
  <script type="text/javascript" src = "formScript.js"></script>
 </body>
