--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 </head>
 <body>
   <div id = "firstname">
-    <input id = "firstname" type = "text" placeholder = "first name"/>
+    <input id = "firstnameInput" type = "text" placeholder = "first name"/>
   </div>
   <br/>
   <div id = "lastname">
-    <input id = "lastname" type = "text" placeholder = "last name"/>
+    <input id = "lastnameInput" type = "text" placeholder = "last name"/>
   </div>
   <br/>
   <div id = "email">
-   <input id = "email" type = "text" placeholder = "email"/>
+   <input id = "emailInput" type = "text" placeholder = "email"/>
   </div>
   <br/>
   <div id = "check">
-    <input type = "checkbox"
+    <input type = "checkbox"/>
     <label for="check"> do you agree to the terms of service? </label>
   </div>
 <br/>
