--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <br/>
   <div id = "check">
-    <input type = "checkbox"/>
+    <input type = "checkbox" id = "checkInput"/>
     <label for="check"> do you agree to the terms of service? </label>
   </div>
 <br/>
