changing border from none to red

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id = "firstname">
+  <div id = "firstname" style = "border: none">
     <input id = "firstnameInput" type = "text" placeholder = "first name"/>
   </div>
   <br/>
-  <div id = "lastname">
+  <div id = "lastname" style = "border: none">
     <input id = "lastnameInput" type = "text" placeholder = "last name"/>
   </div>
   <br/>
-  <div id = "email">
+  <div id = "email" style = "border: none">
    <input id = "emailInput" type = "text" placeholder = "email"/>
   </div>
   <br/>
-  <div id = "check">
+  <div id = "check" style = "border: none">
     <input type = "checkbox" id = "checkInput"/>
     <label for="check"> do you agree to the terms of service? </label>
   </div>
